UPDATE: Install and configure docker

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mime": "^1.6.0",
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
+    "mongo": "^0.1.0",
     "mongodb": "^4.8.1",
     "ms": "^2.0.0",
     "negotiator": "^0.6.3",
